test/libsolidity/syntaxTests/array/length/array_length_cannot_be_constant_function_parameter.sol
contract C {
    function f(uint constant LEN) public {
        uint[LEN] a;
    }
}
// ----
// TypeError: (69-72): Invalid array length, expected integer literal or constant expression.
